--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -68,10 +68,18 @@
 
         <!-- THE MAIN CONTENT -->
         <main class="home-main-content">
-            <div class='gallery-container'>
+            <div class="gallery-title">
+                <h1>GALLERY</h1>
+                <p>Sort by <b>Date</b></p>
             </div>
-            <div class='gallery-filter-and-search'>
-                <h1>I am complete</h1>
+
+            <!-- GALLERY CONTENT -->
+            <div class="gallery-content">
+                <div class='gallery-container'>
+                </div>
+                <div class='gallery-filter-and-search'>
+                    <h1>In progress</h1>
+                </div>
             </div>
         </main>
     </div>
