--- a/templates/home.html
+++ b/templates/home.html
@@ -42,21 +42,21 @@
         <!-- THE SIDE BAR -->
         <aside class="home-side-bar">
             <p><a href="./404.html">OVERVIEW</a></p>
-            <p><a href="./gallery.html">GALLERY</a></p>
+<!--             <p><a href="./gallery.html">GALLERY</a></p>
             <p><a href="./404.html">ORDERS</a></p>
             <p><a href="./404.html">WITHDRAWALS</a></p>
             <p><a href="./404.html">PROFILE</a></p>
-            <p><a href="./404.html./404.html">BLOG</a></p>
+            <p><a href="./404.html./404.html">BLOG</a></p> -->
         </aside>
 
         <aside class="home-menu-bar" id="menu">
             <div>
                 <p><a href="">OVERVIEW</a></p>
-                <p><a href="./gallery.html">GALLERY</a></p>
+<!--                 <p><a href="./gallery.html">GALLERY</a></p>
                 <p><a href="./404.html">ORDERS</a></p>
                 <p><a href="./404.html">WITHDRAWALS</a></p>
                 <p><a href="./404.html">PROFILE</a></p>
-                <p><a href="./404.html">BLOG</a></p>
+                <p><a href="./404.html">BLOG</a></p> -->
             </div>
 
             <div class="user-features user-feature-small-screen">
